[package]
name = "wcag-contrast"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Compute WCAG 2 color contrast ratios and AA/AAA pass levels from hex or RGB colors. Focused, zero-dependency accessibility helper."
documentation = "https://docs.rs/wcag-contrast"
repository = "https://github.com/trananhtung/wcag-contrast"
homepage = "https://github.com/trananhtung/wcag-contrast"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["wcag", "contrast", "accessibility", "a11y", "color"]
categories = ["accessibility", "graphics", "value-formatting"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
